--- a/dashboard.html
+++ b/dashboard.html
@@ -253,32 +253,59 @@
           return prefix + String(count).padStart(6, '0');
         });
       }
-      window.saveImport = async function() {
-        const name = $('#customerName').val() || 'Không cung cấp thông tin';
-        const address = $('#address').val() || 'Không cung cấp thông tin';
-        const cccd = $('#cccd').val() || 'Không cung cấp thông tin';
-        const phone = $('#phone').val() || 'Không cung cấp thông tin';
-        const items = getValidItems('importItems');
-        const total = items.reduce((sum, i) => sum + i.quantity * i.price, 0);
-        const date = new Date().toISOString();
-        const id = currentEditId || await getNextId('imports', 'PNK');
-        const data = {
-          id,
-          name,
-          address,
-          cccd,
-          phone,
-          items,
-          total,
-          date
-        };
-        db.ref('imports/' + id).set(data).then(() => {
-          alert('Đã lưu nhập kho');
-          toggleForm(null);
-          currentEditId = null;
-          loadTable("imports", "importTable");
-        });
-      };
+window.saveImport = async function() {
+  const name = $('#customerName').val() || 'Không cung cấp thông tin';
+  const address = $('#address').val() || 'Không cung cấp thông tin';
+  const cccd = $('#cccd').val() || 'Không cung cấp thông tin';
+  const phone = $('#phone').val() || 'Không cung cấp thông tin';
+  const date = new Date().toISOString();
+
+  const items = [];
+
+  // Truy xuất từng hàng trong form nhập hàng
+  $('#importItems > div').each(function () {
+    const name = $(this).find('input:eq(0)').val().trim();
+    const unit = $(this).find('select').val();
+    const quantity = parseFloat($(this).find('input:eq(2)').val()) || 0;
+    const price = parseFloat($(this).find('input:eq(3)').val()) || 0;
+
+    if (name && unit && quantity && price) {
+      items.push({
+        name,
+        unit,
+        quantity,
+        price
+      });
+    }
+  });
+
+  if (items.length === 0) {
+    alert("Vui lòng nhập ít nhất một mặt hàng hợp lệ.");
+    return;
+  }
+
+  const total = items.reduce((sum, i) => sum + i.quantity * i.price, 0);
+  const id = currentEditId || await getNextId('imports', 'PNK');
+
+  const data = {
+    id,
+    name,
+    address,
+    cccd,
+    phone,
+    items,
+    total,
+    date
+  };
+
+  db.ref('imports/' + id).set(data).then(() => {
+    alert('Đã lưu nhập kho');
+    toggleForm(null);
+    currentEditId = null;
+    loadTable("imports", "importTable");
+  });
+};
+
       window.saveExport = async function() {
         const name = $('#receiverName').val() || 'Không cung cấp thông tin';
         const phone = $('#receiverPhone').val() || 'Không cung cấp thông tin';
