--- a/dashboard.html
+++ b/dashboard.html
@@ -178,35 +178,48 @@
         $("#importForm, #exportForm, #incomeForm, #expenseForm").addClass("hidden");
         if (id) $("#" + id).removeClass("hidden");
       };
-      window.addItem = function(containerId) {
-        const itemHtml = `
-      <div class="grid grid-cols-5 gap-2">
-        <input placeholder="Tên hàng" class="border p-1 rounded" />
-        <select class="border p-1 rounded">
-          <option value="kg">Kg</option>
-          <option value="cái">Cái</option>
-        </select>
-        <input type="number" placeholder="Số lượng" class="border p-1 rounded" />
-        <input type="number" placeholder="Đơn giá" class="border p-1 rounded" />
-        <input placeholder="Thành tiền" class="border p-1 rounded bg-gray-100" readonly />
-      </div>`;
-        $("#" + containerId).append(itemHtml);
-        $("#" + containerId + " input, select").off("input").on("input", function() {
-          updateTotal(containerId);
-        });
-      };
+window.addItem = function (containerId) {
+  const itemHtml = `
+    <div class="grid grid-cols-5 gap-2">
+      <input placeholder="Tên hàng" class="border p-1 rounded" />
+      <select class="border p-1 rounded">
+        <option value="kg">Kg</option>
+        <option value="cái">Cái</option>
+      </select>
+      <input type="number" placeholder="Số lượng" class="border p-1 rounded qty" />
+      <input type="number" placeholder="Đơn giá" class="border p-1 rounded price" />
+      <input placeholder="Thành tiền" class="border p-1 rounded bg-gray-100" readonly />
+    </div>`;
+  $("#" + containerId).append(itemHtml);
 
-      function updateTotal(containerId) {
-        let total = 0;
-        $(`#${containerId} > div`).each(function() {
-          const qty = parseFloat($(this).find("input:eq(2)").val()) || 0;
-          const price = parseFloat($(this).find("input:eq(3)").val()) || 0;
-          const amt = qty * price;
-          $(this).find("input:eq(4)").val(amt.toLocaleString());
-          total += amt;
-        });
-        $(`#${containerId === "importItems" ? "importTotal" : "exportTotal"}`).text(total.toLocaleString());
-      }
+  // Gắn lại sự kiện cho các input mới
+  bindItemEvents(containerId);
+};
+
+      function bindItemEvents(containerId) {
+  $(`#${containerId} .qty, #${containerId} .price`).off('input').on('input', function () {
+    const row = $(this).closest('div');
+    const qty = parseFloat(row.find('.qty').val()) || 0;
+    const price = parseFloat(row.find('.price').val()) || 0;
+    const amount = qty * price;
+    row.find('input:eq(4)').val(amount.toLocaleString());
+
+    updateTotal(containerId);
+  });
+}
+
+
+function updateTotal(containerId) {
+  let total = 0;
+  $(`#${containerId} > div`).each(function () {
+    const qty = parseFloat($(this).find('.qty').val()) || 0;
+    const price = parseFloat($(this).find('.price').val()) || 0;
+    total += qty * price;
+  });
+  const totalId = containerId === 'importItems' ? 'importTotal' : 'exportTotal';
+  $(`#${totalId}`).text(total.toLocaleString());
+}
+
 
       function fillItems(containerId, items) {
         const container = $("#" + containerId);
@@ -216,8 +229,8 @@
         <div class="grid grid-cols-5 gap-2">
           <input value="${item.name}" class="border p-1 rounded" />
           <select class="border p-1 rounded">
-            <option value="kg" ${item.unit === 'kg' ? 'selected' : ''}>kg</option>
-            <option value="cái" ${item.unit === 'cái' ? 'selected' : ''}>cái</option>
+            <option value="Kg" ${item.unit === 'Kg' ? 'selected' : ''}>Kg</option>
+            <option value="Cái" ${item.unit === 'Cái' ? 'selected' : ''}>Cái</option>
           </select>
           <input type="number" value="${item.quantity}" class="border p-1 rounded" />
           <input type="number" value="${item.price}" class="border p-1 rounded" />
