--- a/dashboard.html
+++ b/dashboard.html
@@ -238,6 +238,25 @@
         });
         container.find("input, select").off("input").on("input", () => updateTotal(containerId));
       }
+$('#importItems').on('input', '.qty, .price', function () {
+  const row = $(this).closest('.grid');
+  const qty = parseFloat(row.find('.qty').val()) || 0;
+  const price = parseFloat(row.find('.price').val()) || 0;
+  const amount = qty * price;
+  row.find('input:eq(4)').val(amount.toLocaleString());
+  updateTotal('importItems');
+});
+
+// Tính "Thành tiền" và "Tổng tiền" cho Xuất kho
+$('#exportItems').on('input', '.qty, .price', function () {
+  const row = $(this).closest('.grid');
+  const qty = parseFloat(row.find('.qty').val()) || 0;
+  const price = parseFloat(row.find('.price').val()) || 0;
+  const amount = qty * price;
+  row.find('input:eq(4)').val(amount.toLocaleString());
+  updateTotal('exportItems');
+});
+      
 
       function getValidItems(containerId) {
         const items = [];
