--- a/dashboard.html
+++ b/dashboard.html
@@ -304,6 +304,9 @@ window.saveImport = async function() {
     currentEditId = null;
     loadTable("imports", "importTable");
   });
+
+  console.log("Items:", items);
+console.log("Data to save:", data);
 };
 
 
