--- a/dashboard.html
+++ b/dashboard.html
@@ -135,6 +135,21 @@
       <tbody id="incomeExpenseTable"></tbody>
     </table>
 
+<h3 class="text-lg font-semibold mb-2 mt-6">Danh sách Tồn kho</h3>
+<table class="w-full border text-sm mb-6">
+  <thead class="bg-gray-100">
+    <tr>
+      <th class="border px-2 py-1">STT</th>
+      <th class="border px-2 py-1">Tên hàng</th>
+      <th class="border px-2 py-1 text-center">Số lượng</th>
+      <th class="border px-2 py-1 text-center">Đơn vị</th>
+      <th class="border px-2 py-1 text-right">Giá trị tồn</th>
+    </tr>
+  </thead>
+  <tbody id="inventoryTable"></tbody>
+</table>
+    
+
     <!-- Modal -->
     <div id="detailModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
       <div class="bg-white rounded shadow-lg max-w-md w-full p-4">
@@ -507,6 +522,67 @@ $(document).on('input', '.qty, .price', function () {
     updateTotal('exportItems');
   }
 });
+
+      function calculateInventory() {
+  const inventory = {}; // { "N_Kg": { name: "N", unit: "Kg", quantity: 1, value: 10000 } }
+
+  function addItems(items, isImport) {
+    items.forEach(item => {
+      const key = item.name + '_' + item.unit;
+      if (!inventory[key]) {
+        inventory[key] = {
+          name: item.name,
+          unit: item.unit,
+          quantity: 0,
+          value: 0
+        };
+      }
+      if (isImport) {
+        inventory[key].quantity += item.quantity;
+        inventory[key].value += item.quantity * item.price;
+      } else {
+        inventory[key].quantity -= item.quantity;
+        inventory[key].value -= item.quantity * item.price;
+      }
+    });
+  }
+
+  // Lấy dữ liệu từ Firebase
+  db.ref('imports').once('value').then(importSnap => {
+    importSnap.forEach(importDoc => {
+      addItems(importDoc.val().items || [], true);
+    });
+
+    db.ref('exports').once('value').then(exportSnap => {
+      exportSnap.forEach(exportDoc => {
+        addItems(exportDoc.val().items || [], false);
+      });
+
+      // ✅ In kết quả tồn kho
+      const result = Object.values(inventory).filter(i => i.quantity > 0);
+      console.log("Tồn kho hiện tại:");
+      result.forEach(i => {
+        console.log(`${i.name} - ${i.quantity} ${i.unit} ~ ${i.value.toLocaleString()} đ`);
+      });
+
+      // Hoặc render ra DOM
+      const tableBody = $('#inventoryTable');
+      tableBody.empty();
+      result.forEach((i, index) => {
+        tableBody.append(`
+          <tr>
+            <td class="border px-2 py-1 text-center">${index + 1}</td>
+            <td class="border px-2 py-1">${i.name}</td>
+            <td class="border px-2 py-1 text-center">${i.quantity}</td>
+            <td class="border px-2 py-1 text-center">${i.unit}</td>
+            <td class="border px-2 py-1 text-right">${i.value.toLocaleString()} đ</td>
+          </tr>
+        `);
+      });
+    });
+  });
+}
+calculateInventory();
 
     });
   </script>
