--- a/dashboard.html
+++ b/dashboard.html
@@ -148,6 +148,23 @@
   </thead>
   <tbody id="inventoryTable"></tbody>
 </table>
+
+    <h3 class="text-lg font-semibold mt-6 mb-2">Tiền hiện có theo nguồn</h3>
+<div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
+  <div class="p-4 border rounded bg-white shadow">
+    <div class="text-gray-500">TM</div>
+    <div id="cashTM" class="text-xl font-bold text-green-600">0 đ</div>
+  </div>
+  <div class="p-4 border rounded bg-white shadow">
+    <div class="text-gray-500">VCB</div>
+    <div id="cashVCB" class="text-xl font-bold text-green-600">0 đ</div>
+  </div>
+  <div class="p-4 border rounded bg-white shadow">
+    <div class="text-gray-500">CK</div>
+    <div id="cashCK" class="text-xl font-bold text-green-600">0 đ</div>
+  </div>
+</div>
+
     
 
     <!-- Modal -->
@@ -583,6 +600,43 @@ $(document).on('input', '.qty, .price', function () {
   });
 }
 calculateInventory();
+
+
+      function calculateCashBySource() {
+  const sources = {
+    TM: 0,
+    VCB: 0,
+    CK: 0
+  };
+
+  db.ref('cashflow').once('value').then(snap => {
+    snap.forEach(child => {
+      const d = child.val();
+      const amount = parseFloat(d.amount) || 0;
+      const source = d.source;
+
+      if (!source || !sources.hasOwnProperty(source)) return;
+
+      if (d.type === 'thu') {
+        sources[source] += amount;
+      } else if (d.type === 'chi') {
+        sources[source] -= amount;
+      }
+    });
+
+    // ✅ Hiển thị lên console
+    console.log("Tổng tiền theo nguồn:");
+    Object.keys(sources).forEach(key => {
+      console.log(`${key}: ${sources[key].toLocaleString()} đ`);
+    });
+
+    // ✅ Hoặc cập nhật lên giao diện
+    $('#cashTM').text(sources.TM.toLocaleString() + " đ");
+    $('#cashVCB').text(sources.VCB.toLocaleString() + " đ");
+    $('#cashCK').text(sources.CK.toLocaleString() + " đ");
+  });
+}
+calculateCashBySource();
 
     });
   </script>
